Adding toptal task solutions)